styling is improved and menu bar is implented using Unordered list

--- a/contact_us.html
+++ b/contact_us.html
@@ -9,12 +9,12 @@
 <body style="background-color: #F8F8FF;">
 	<div id="header" >
 		<img src="./images/infoHubLogo.png">
-		<table id="otherpages" >
-			<th class="horizontal_nav"><a href="index.html" >Home</a></th>
-			<th class="horizontal_nav"><a href="step2015_details.html" >STEP 2015-2017</a></th>
-			<th class="horizontal_nav"><a href="myQuiz.html" >Quiz</th>
-			<th class="horizontal_nav"><a href="contact_us.html" >Contact Us</th>
-		</table>
+		<ul id="otherpages" >
+			<li class="horizontal_nav"><a href="index.html" >Home</a></li>
+			<li class="horizontal_nav"><a href="step2015_details.html">STEP 2015-2017</a></li>
+			<li class="horizontal_nav"><a href="myQuiz.html" >Quiz</a></li>
+			<li class="horizontal_nav"><a href="contact_us.html" >Contact Us</a></li>
+		</ul>
 	</div>
 	<div id="nav">
 		<table  id="otherLinks">
@@ -33,15 +33,14 @@
 			<tr><td><a href="https://www.kotak.com" > KOTAK Net Banking</a></td></tr>
 		</table>
 	</div>
-	<!-- <div id="section">hello</div> -->
-	<div style="margin-left: 10px;float: left;">
-		<h1 style="font-size: 18;font-family: Arial;font-weight: bold;">Contact Details:</h1>
+	<div>
+		<h1>Contact Details:</h1>
 		<table  id="contact_info">
-			<tr><td id="contact_details">Name</td><td>:</td><td>Dharmendra Singh</td></tr>
-			<tr><td id="contact_details">D.O.B</td><td>:</td><td>08/AUG/1990</td></tr>
-			<tr><td id="contact_details">Mob Number</td><td>:</td><td>09639883923</td></tr>
-			<tr><td id="contact_details">E-mail Id Personal</td><td>:</td><td>negidharmendra.negi44@gmail.com</td></tr>
-			<tr><td id="contact_details">E-mail Id workplace</td><td>:</td><td>dharmenn@thoughtworks.com</td></tr>
+			<tr><td id="contact_details">Name</td><td id="colon">:</td><td>Dharmendra Singh</td></tr>
+			<tr><td id="contact_details">D.O.B</td><td id="colon">:</td><td>08/AUG/1990</td></tr>
+			<tr><td id="contact_details">Mob Number</td><td id="colon">:</td><td>09639883923</td></tr>
+			<tr><td id="contact_details">E-mail Id Personal</td><td id="colon">:</td><td>negidharmendra.negi44@gmail.com</td></tr>
+			<tr><td id="contact_details">E-mail Id workplace</td><td id="colon">:</td><td>dharmenn@thoughtworks.com</td></tr>
 		</table>
 	</div>
 </body>
