--- a/listOf_library_books.html
+++ b/listOf_library_books.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-<link rel="stylesheet" type="text/css" href="style/common.css">
-<link rel="stylesheet" type="text/css" href="style/navigation.css">
+<link rel="stylesheet" type="text/css" href="style/books.css">
 <body style="background-color: #F8F8FF;">
 		<h3 style="padding-left:20px">List of books issued from step library</h3>
 		<table border="0" >
@@ -16,14 +15,14 @@
 				<td>37-12</td>
 				<td>23-SEP-2015</td>
 				<td>David Flanagan</td>
-				<td><a href="https://tw-steplibrary.rhcloud.com/user/books">Submit</a></td>
+				<td><a1 href="https://tw-steplibrary.rhcloud.com/user/books">Submit</a1></td>
 			</tr>
 			<tr>
 				<td>The One Minute Manager</td>
 				<td>37-12</td>
 				<td>23-SEP-2015</td>
 				<td>Kenneth H. Blanchard</td>
-				<td><a href="https://tw-steplibrary.rhcloud.com/user/books">Submit</a></td>
+				<td><a1 href="https://tw-steplibrary.rhcloud.com/user/books">Submit</a1></td>
 			</tr>
 		</table>
 </body>
