--- a/myQuiz.html
+++ b/myQuiz.html
@@ -10,12 +10,12 @@
 <body style="background-color: #F8F8FF;">
   <div id="header" >
     <img src="./images/infoHubLogo.png">
-    <table id="otherpages" >
-      <th class="horizontal_nav"><a href="index.html" >Home</a></th>
-      <th class="horizontal_nav"><a href="step2015_details.html" >STEP 2015-2017</a></th>
-      <th class="horizontal_nav"><a href="myQuiz.html" >Quiz</th>
-      <th class="horizontal_nav"><a href="contact_us.html" >Contact Us</th>
-    </table>
+    <ul id="otherpages" >
+      <li class="horizontal_nav"><a href="index.html" >Home</a></li>
+      <li class="horizontal_nav"><a href="step2015_details.html">STEP 2015-2017</a></li>
+      <li class="horizontal_nav"><a href="myQuiz.html" >Quiz</a></li>
+      <li class="horizontal_nav"><a href="contact_us.html" >Contact Us</a></li>
+    </ul>
   </div>
   <div id="nav">
     <table  id="otherLinks">
