--- a/step2015_iframe.html
+++ b/step2015_iframe.html
@@ -2,76 +2,26 @@
 <html>
 <style type="text/css">
 	#step2015-2017{
+		width: 100%;
 		margin-top: 20px;
+		margin-top:20px;
+	}
+	table{
 		border: hidden;
 		border-collapse: collapse;
-		margin-left: 10px;
-		margin-top:20px;
-		float: left;
+		width: 100%;
 	}
 </style>
 <head>
-	<title>Hello</title>
+<title>Hello</title>
 </head>
 <body style="background-color: #F8F8FF;">
-	<div id="step2015-2017">
-		<table border="1" style="bordwer" id="step2015-2017">
-			<th>Name</th>
-			<th>D.O.B</th>
-			<th>Contact Number</th>
-			<th>Employee Id</th>
-			<tr>
-				<td>Abhishek Gupta </td><td>25/12/1996</td><td></td><td>17810</td>
-			</tr>
-			<tr><td>Abhishek Thakur </td><td></td><td></td><td>17811</td></tr>
-			<tr><td>Adarsh Sandilya </td><td>13/11/1996</td><td></td><td>17812</td></tr>
-			<tr><td>Akshay Kumar Sharma </td><td></td><td></td><td>17813</td></tr>
-			<tr><td>Anjaly Joy </td><td></td><td></td><td>17815</td></tr>
-			<tr><td>Anusree Prakash </td><td></td><td></td><td>17816</td></tr>
-			<tr><td>Arindam Karmakar </td><td></td><td></td><td>17817</td></tr>
-			<tr><td>Ashwin Kumar K A </td><td></td><td></td><td>17818</td></tr>
-			<tr><td>Basava Navyasri </td><td>23/05/1997</td><td></td><td>17819</td></tr>
-			<tr><td>Brindaban Patra </td><td></td><td></td><td>17820</td></tr>
-			<tr><td>Dharmendra Negi </td><td>08/08/1990</td><td></td><td>17821</td></tr>
-			<tr><td>Durga Manasa Maruboyina </td><td></td><td></td><td>17825</td></tr>
-			<tr><td>Bindu S </td><td></td><td></td><td>17828</td></tr>
-			<tr><td>Ganesh Patil </td><td></td><td></td><td>17829</td></tr>
-			<tr><td>Gaurav Khuperkar </td><td></td><td></td><td>17830</td></tr>
-			<tr><td>Jai Om Pandey </td><td>30/04/1994</td><td></td><td>17831</td></tr>
-			<tr><td>Jishnu Sanyal </td><td></td><td></td><td>17832</td></tr>
-			<tr><td>Jitendra Sachdeva </td><td></td><td></td><td>17833</td></tr>
-			<tr><td>Lalit Pandey </td><td>05/07/1994</td><td></td><td>17834</td></tr>
-			<tr><td>Madhuri Patil </td><td></td><td></td><td>17835</td></tr>
-			<tr><td>Mitesh Kumar Jha </td><td>10/08/1996</td><td></td><td>17836</td></tr>
-			<tr><td>Nabeel Ahmed </td><td></td><td></td><td>17837</td></tr>
-			<tr><td>Nimesh Pulikkaparambil </td><td></td><td></td><td>17838</td></tr>
-			<tr><td>Prasun Kumar Palchowdhury </td><td></td><td></td><td>17839</td></tr>
-			<tr><td>Rahul Nandi </td><td></td><td></td><td>17841</td></tr>
-			<tr><td>Rahul Verma </td><td></td><td></td><td>17842</td></tr>
-			<tr><td>Ranju Karmakar </td><td>30/09/1993</td><td></td><td>17843</td></tr>
-			<tr><td>Sagar Maurya </td><td>18/09/1994</td><td></td><td>17844</td></tr>
-			<tr><td>Sanjit Das </td><td></td><td></td><td>17860</td></tr>
-			<tr><td>Saranraj Sekar </td><td></td><td></td><td>17861</td></tr>
-			<tr><td>Sarath V S </td><td></td><td></td><td>17862</td></tr>
-			<tr><td>Sayan Bisui </td><td></td><td></td><td>17864</td></tr>
-			<tr><td>SeetaRam Yadav </td><td>20/07/1992</td><td></td><td>17865</td></tr>
-			<tr><td>Shibi K R </td><td></td><td></td><td>17866</td></tr>
-			<tr><td>Shruti Chakraborty </td><td>05/05/1996</td><td></td><td>17867</td></tr>
-			<tr><td>Simran Pal </td><td></td><td></td><td>17868</td></tr>
-			<tr><td>Sooraj Parameswaran </td><td></td><td></td><td>17869</td></tr>
-			<tr><td>Sudipta Rakshit </td><td></td><td></td><td>17870</td></tr>
-			<tr><td>Suman Das </td><td></td><td></td><td>17872</td></tr>
-			<tr><td>Suman Maity </td><td></td><td></td><td>17876</td></tr>
-			<tr><td>Supriya Gole </td><td></td><td></td><td>17877</td></tr>
-			<tr><td>Surajit Chongder </td><td></td><td></td><td>17878</td></tr>
-			<tr><td>Syanima K S </td><td></td><td></td><td>17879</td></tr>
-			<tr><td>Vathsala M </td><td></td><td></td><td>17880</td></tr>
-			<tr><td>Vijay Kumar B </td><td></td><td></td><td>17881</td></tr>
-			<tr><td>Vikas Kumar </td><td></td><td></td><td>17882</td></tr>
-			<tr><td>Vinay Shankar Shukla </td><td>08/12/1994</td><td></td><td>17884</td></tr>
-			<tr><td>Viraj Parab </td><td></td><td></td><td>17885</td></tr>
-			<tr><td>Arun Sathian </td><td></td><td></td><td>17886</td></tr>
-		</table>
-	</div>
+<div id="step2015-2017">
+<table border="1">
+<th>Name</th><th>D.O.B</th><th>Employee Id.</th><th>E-mail Id</th><th>Git-Hub Id</th><th>Contact Number</th>
+
+
+</table>
+</div>
 </body>
 </html>
